Issue GEN-94: Added item section centered variant and added section/header section spacing rule

--- a/drupal/web/themes/custom/genlyd_aarhus/source/_base/_base.scss
+++ b/drupal/web/themes/custom/genlyd_aarhus/source/_base/_base.scss
@@ -21,15 +21,6 @@ a {
   color: $color-black-light;
 }
 
-p {
-  margin: 0;
-}
-
-p + p {
-  margin-bottom: 10px;
-  margin-top: 10px;
-}
-
 * {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
